<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Second_Fragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvRutMostrar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:background="@color/design_default_color_secondary"
        android:text="@string/ejemploTv"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ivNumero1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#08BAC1"
        android:text="@string/buton_1"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:cornerRadius="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRutMostrar"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ivNumero2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#08BAC1"
        android:text="@string/buton_2"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:cornerRadius="150dp"
        app:layout_constraintStart_toEndOf="@+id/ivNumero1"
        app:layout_constraintTop_toBottomOf="@id/tvRutMostrar"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ivNumero3"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#08BAC1"
        android:text="@string/buton_3"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:cornerRadius="150dp"
        app:layout_constraintStart_toEndOf="@+id/ivNumero2"
        app:layout_constraintTop_toBottomOf="@id/tvRutMostrar"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ivGuion"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#08BAC1"
        android:text="@string/buton_raya"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:cornerRadius="150dp"
        app:layout_constraintStart_toEndOf="@+id/ivNumero3"
        app:layout_constraintTop_toBottomOf="@id/tvRutMostrar"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ivNumero4"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#08BAC1"
        android:text="@string/buton_4"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:cornerRadius="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivNumero1"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ivNumero5"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#08BAC1"
        android:text="@string/buton_5"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:cornerRadius="150dp"
        app:layout_constraintStart_toEndOf="@id/ivNumero4"
        app:layout_constraintTop_toBottomOf="@id/ivNumero2"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ivNumero6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#08BAC1"
        android:text="@string/buton_6"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:cornerRadius="150dp"
        app:layout_constraintStart_toEndOf="@id/ivNumero5"
        app:layout_constraintTop_toBottomOf="@id/ivNumero3"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ivK"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#08BAC1"
        android:text="@string/buton_k"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:cornerRadius="150dp"
        app:layout_constraintStart_toEndOf="@id/ivNumero6"
        app:layout_constraintTop_toBottomOf="@id/ivGuion"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ivNumero7"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#08BAC1"
        android:text="@string/buton_7"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:cornerRadius="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivNumero4"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ivNumero8"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#08BAC1"
        android:text="@string/buton_8"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:cornerRadius="150dp"
        app:layout_constraintStart_toEndOf="@id/ivNumero7"
        app:layout_constraintTop_toBottomOf="@id/ivNumero5"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ivNumero9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#08BAC1"
        android:text="@string/buton_9"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:cornerRadius="150dp"
        app:layout_constraintStart_toEndOf="@id/ivNumero8"
        app:layout_constraintTop_toBottomOf="@id/ivNumero6"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ivNumero0"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#08BAC1"
        android:text="@string/buton_0"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:cornerRadius="150dp"
        app:layout_constraintStart_toEndOf="@id/ivNumero9"
        app:layout_constraintTop_toBottomOf="@id/ivK"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tvReiniciar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/teal_200"
        android:gravity="center"
        android:text="@string/button_reiniciar"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:cornerRadius="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivNumero8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tvConfirmar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/teal_700"
        android:gravity="center"
        android:text="@string/button_confirmar"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:cornerRadius="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvReiniciar" />

</androidx.constraintlayout.widget.ConstraintLayout>